--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-3"></div>
-            <div class="col-sm-6">
+            <div class="col-sm-6 col-12">
                 <div class="tex">
                     This is a mini Project for Advanced Web Technology
                 </div>
