--- a/name.html
+++ b/name.html
@@ -28,6 +28,7 @@
                 <a href="next.html"><p class="go">Go</p></a>
             </div>
         </div>
+        <p id="nam2"></p>
         <div class="col-sm-3"></div>
     </div>
 </body>
