--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body style="background-color:#00cdcf">
     <div class="container">
         <div class="row">
-            <div class="col-sm-3"></div>
-            <div class="col-sm-6 col-12">
+            <div class="col-md-3"></div>
+            <div class="col-md-6 col-12">
                 <div class="tex">
                     This is a mini Project for Advanced Web Technology
                 </div>
@@ -29,7 +29,7 @@
                     <p>Made by Lukesh Kolhe</p>
                 </div>
             </div>
-            <div class="col-sm-3"></div>
+            <div class="col-md-3"></div>
         </div>
     </div>
 </body>
