--- a/next.html
+++ b/next.html
@@ -23,7 +23,7 @@
             <p>Lets watch for some of the amazing places to visit in our beautiful India</p>
         </div>
         <div class="row">
-            <div class="col-sm-4">
+            <div class="col-md-4">
                 <div class="card">
                     <div class="image">
                         <img class="img-responsive" src="assets/delhi.jpg">
@@ -37,7 +37,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-md-4">
                 <div class="card">
                     <div class="image">
                         <img class="img-responsive" src="assets/jaipur.jpg">
@@ -50,7 +50,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-md-4">
                 <div class="card">
                     <div class="image">
                         <img class="img-responsive" src="assets/agra.jpg">
@@ -65,7 +65,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-4">
+            <div class="col-md-4">
                 <div class="card">
                     <div class="image">
                         <img class="img-responsive" src="assets/goa.jpg">
@@ -78,7 +78,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-md-4">
                 <div class="card">
                     <div class="image">
                         <img class="img-responsive" src="assets/mumbai.jpg">
@@ -91,7 +91,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-md-4">
                 <div class="card">
                     <div class="image">
                         <img class="img-responsive" src="assets/new delhi.jpg">
@@ -106,7 +106,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-4">
+            <div class="col-md-4">
                 <div class="card">
                     <div class="image">
                         <img class="img-responsive" src="assets/varanasi.jpg">
@@ -119,7 +119,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-md-4">
                 <div class="card">
                     <div class="image">
                         <img class="img-responsive" src="assets/daipur.jpg">
@@ -132,7 +132,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-md-4">
                 <div class="card">
                     <div class="image">
                         <img class="img-responsive" src="assets/manali.jpg">
